--- a/Client/src/jamtaba/gui/BaseTrackView.ui
+++ b/Client/src/jamtaba/gui/BaseTrackView.ui
@@ -14,6 +14,18 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="mainLayout">
+   <property name="leftMargin">
+    <number>6</number>
+   </property>
+   <property name="topMargin">
+    <number>6</number>
+   </property>
+   <property name="rightMargin">
+    <number>6</number>
+   </property>
+   <property name="bottomMargin">
+    <number>6</number>
+   </property>
    <item>
     <widget class="QWidget" name="namesPanel" native="true">
      <layout class="QVBoxLayout" name="topLayout">
@@ -73,6 +85,9 @@
       </property>
       <property name="rightMargin">
        <number>0</number>
+      </property>
+      <property name="horizontalSpacing">
+       <number>6</number>
       </property>
       <property name="verticalSpacing">
        <number>12</number>
