--- a/src/jamtaba/gui/mainframe.ui
+++ b/src/jamtaba/gui/mainframe.ui
@@ -104,7 +104,7 @@
           <bool>false</bool>
          </property>
          <property name="tabsClosable">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
          <widget class="QWidget" name="tab">
           <attribute name="title">
@@ -131,7 +131,7 @@
                 <x>0</x>
                 <y>0</y>
                 <width>689</width>
-                <height>647</height>
+                <height>644</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_6">
