--- a/src/jamtaba/resources/jamtaba.css
+++ b/src/jamtaba/resources/jamtaba.css
@@ -121,9 +121,9 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical, QScrollBar::add-pa
 .QLineEdit[enabled="false"]{
     border-radius: 3px;
     padding: 2px;
-    background: none;
-    color: white;
-    border: none;
+    background: rgb(100, 100, 100, 90);
+    color: rgb(255, 255, 255, 200);
+    border: 1px solid rgb(51, 51, 51, 70);
 }
 
 
@@ -315,6 +315,12 @@ JamRoomViewPanel{
 background: rgba(255,255, 255, 180);
 border: 1px solid rgba(0, 0, 0, 30);
 border-radius: 5px;
+}
+
+JamRoomViewPanel  QWebView{
+    border: 1px solid black;
+    height: 100%;
+    max-height: 120px;
 }
 
 JamRoomViewPanel > #plotPanel{
