--- a/src/jamtaba/resources/jamtaba.qrc
+++ b/src/jamtaba/resources/jamtaba.qrc
@@ -13,6 +13,7 @@
         <file>metronome.png</file>
         <file>ninja.png</file>
         <file>licence.png</file>
+        <file>chat.png</file>
     </qresource>
     <qresource prefix="/flags">
         <file>flags/ad.png</file>
