chat funcionando, faltam alguns detalhes

--- a/Client/src/jamtaba/gui/NinjamRoomWindow.ui
+++ b/Client/src/jamtaba/gui/NinjamRoomWindow.ui
@@ -63,7 +63,7 @@
          <string/>
         </property>
         <property name="flat">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
        </widget>
       </item>
