usando resampler simples, mas tendo problema com o maxLenght dos SAmplesBuffers quando o resample gera buffers muito grandes. Estou migrando para vector

--- a/Client/src/jamtaba/resources/jamtaba.qrc
+++ b/Client/src/jamtaba/resources/jamtaba.qrc
@@ -269,5 +269,7 @@
     <qresource prefix="/">
         <file>click.wav</file>
         <file>loading.gif</file>
+        <file>../../../../bateria mono.ogg</file>
+        <file>../../../../loop 192KHz.wav.ogg</file>
     </qresource>
 </RCC>
