--- a/Client/src/jamtaba/resources/jamtaba.css
+++ b/Client/src/jamtaba/resources/jamtaba.css
@@ -122,7 +122,7 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical, QScrollBar::add-pa
     border-radius: 3px;
     padding: 2px;
     background: rgb(100, 100, 100, 90);
-    color: rgb(255, 255, 255, 200);
+    color: rgb(0, 0, 0);
     border: 1px solid rgb(51, 51, 51, 70);
 }
 
@@ -418,9 +418,7 @@ NinjamPanel{
     border-radius: 3px;
     border: 1px solid rgb(135, 135, 135);
     min-height: 100px;
-
 }
-
 
 /*Chat */
 ChatMessagePanel > QLabel#labelUserName{
