--- a/Client/src/jamtaba/gui/ChatPanel.ui
+++ b/Client/src/jamtaba/gui/ChatPanel.ui
@@ -26,7 +26,10 @@
    <property name="bottomMargin">
     <number>6</number>
    </property>
-   <item row="1" column="0">
+   <item row="2" column="1">
+    <widget class="QLineEdit" name="chatText"/>
+   </item>
+   <item row="2" column="0">
     <widget class="QLabel" name="iconLabel">
      <property name="text">
       <string/>
@@ -39,10 +42,26 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="chatText"/>
+   <item row="2" column="2" alignment="Qt::AlignHCenter|Qt::AlignVCenter">
+    <widget class="QPushButton" name="buttonClear">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="toolTip">
+      <string>clear the messages ...</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="flat">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
-   <item row="0" column="0" colspan="2">
+   <item row="0" column="0" colspan="3">
     <widget class="QScrollArea" name="chatScroll">
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -56,7 +75,7 @@
         <x>0</x>
         <y>0</y>
         <width>306</width>
-        <height>372</height>
+        <height>369</height>
        </rect>
       </property>
       <property name="minimumSize">
