--- a/Client/src/jamtaba/resources/jamtaba.css
+++ b/Client/src/jamtaba/resources/jamtaba.css
@@ -70,11 +70,22 @@ QScrollBar::handle:vertical {
   max-height: 20px;
   height: 20px;
 }
+
+QScrollBar::handle:vertical:hover {
+  background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(140, 146, 138, 255), stop:0.47 rgba(121, 121, 121, 255), stop:0.49 rgba(111, 95, 97, 255), stop:0.92 rgba(172, 170, 170, 255));
+}
+
 QScrollBar::handle:horizontal {
   background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0, stop:0.92 rgba(120, 126, 118, 255), stop:0.49 rgba(91, 91, 91, 255), stop:0.47 rgba(81, 75, 77, 255), stop:0 rgba(142, 140, 140, 255));
   max-width: 20px;
   width: 20px;
 }
+
+QScrollBar::handle:horizontal:hover {
+  background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0,
+  stop:0.92 rgba(140, 146, 138, 255), stop:0.49 rgba(121, 121, 121, 255), stop:0.47 rgba(101, 95, 97, 255), stop:0 rgba(162, 160, 160, 255));
+}
+
 
 QScrollBar::add-line:vertical {
   border: none;/*2px solid red;*/
@@ -453,6 +464,17 @@ NinjamPanel{
 }
 
 /*Chat */
+ChatPanel > QPushButton#buttonClear{
+    font-size: 8pt;
+    color: rgb(120, 120, 120);
+    height: 20px;
+    width: 17px;
+    background-image: url(:/images/broom.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left: 0px;
+}
+
 ChatMessagePanel > QLabel#labelUserName{
     padding: 0px;
     padding-right: 3px;
