many improvements in resampling and bug fixes in enter and leaving rooms. Improvements in AudioDriver too.

--- a/Client/src/jamtaba/resources/jamtaba.qrc
+++ b/Client/src/jamtaba/resources/jamtaba.qrc
@@ -270,5 +270,6 @@
     <qresource prefix="/">
         <file>click.wav</file>
         <file>loading.gif</file>
+        <file>../../../../loop 192KHz.wav.ogg</file>
     </qresource>
 </RCC>
