--- a/Client/src/jamtaba/gui/mainframe.ui
+++ b/Client/src/jamtaba/gui/mainframe.ui
@@ -35,15 +35,31 @@
         <height>0</height>
        </size>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item>
-        <widget class="QLabel" name="label">
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0">
+        <widget class="QLabel" name="labelSectionTitle">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>1</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="text">
-          <string>Your Controls</string>
+          <string>Your inputs</string>
          </property>
         </widget>
        </item>
-       <item>
+       <item row="0" column="1">
+        <widget class="QPushButton" name="toolButton">
+         <property name="toolTip">
+          <string>add or remove channels ...</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" colspan="2">
         <widget class="Line" name="line">
          <property name="autoFillBackground">
           <bool>false</bool>
@@ -56,7 +72,7 @@
          </property>
         </widget>
        </item>
-       <item>
+       <item row="2" column="0" colspan="2">
         <widget class="QWidget" name="localTracksWidget" native="true">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -130,7 +146,7 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>689</width>
+                <width>679</width>
                 <height>644</height>
                </rect>
               </property>
