xmit working and improvements in style sheet

--- a/Client/src/jamtaba/gui/mainframe.ui
+++ b/Client/src/jamtaba/gui/mainframe.ui
@@ -49,16 +49,6 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QPushButton" name="toolButton">
-         <property name="toolTip">
-          <string>add or remove channels ...</string>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
        <item row="1" column="0" colspan="2">
         <widget class="Line" name="line">
          <property name="autoFillBackground">
@@ -69,6 +59,16 @@
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QPushButton" name="toolButton">
+         <property name="toolTip">
+          <string>add or remove channels ...</string>
+         </property>
+         <property name="text">
+          <string/>
          </property>
         </widget>
        </item>
@@ -94,6 +94,22 @@
            <number>0</number>
           </property>
          </layout>
+        </widget>
+       </item>
+       <item row="3" column="0" colspan="2">
+        <widget class="QPushButton" name="xmitButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Transmit</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
       </layout>
